Changelog
=========

0.2.0 (?)
---------

* Added docs to sdist


0.1.1 (2022-01-16)
------------------

Minor updates to first release.

* New functions and classes:
  - segment_distance in math
* Bugfixes:
  - math.read_divide correctly handles scalar inputs
* Created pytest configuration, added first set of unit tests
  - files.tests.test_csv
  - tests.math.segment_distance
* Improved documentation with autosummary
* Added this CHANGELOG to installed data


0.1 (2022-01-10)
----------------

First release.

* New modules
  - time
  - files.ui
* New functions and classes:
  - json_registry made public in configuration
  - semilogx_base, semilogy_base, loglog_base in mpl_util
  - map_array, rms in math
  - split_extension in files
* API changes:
  - string_util.timestamp moved to time
  - Added mask2runs and runs2mask to math
  - Improvements to NumpyObject in configuration
  - Improvements to copy_func in objects
  - Added n argument to insert_suffix in files
* Bufixes:
  - mpl_util.show_extents axis confusion
  - Broken imports in submodules
* Officially supporting Python versions up to 3.10
* README -> README.md so GitHub can pick it up


0.1a2 (2021-01-09)
------------------

Second alpha release.

* Major additions to API
* New modules:
  - threads
  - configuration
  - structures
  - mapping
  - ctypes_util
* New functions and classes:
  - CloseableMixin in recipes
  - to_hex, camel2snake, snake2camel, timestamp in string_util
  - set_labels in mpl_utils
  - real_divide, threshold, ang_diff_* in math
* API changes:
  - Moved half of recipes to mapping
  - Updated Namespace, (in mapping), added setdefaults


0.1a1 (2021-04-03)
------------------

First alpha release.

* API changes:
  - SentinelType made public in root package
  - ensure_extension.modes renamed to ensure_exntension.policies in files


0.1a1.dev2 (2019-03-31)
-----------------------

Second development pre-release.

*   Major overhaul of documentation

0.1a1.dev1 (2019-03-20)